lab3 copy/Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-ingress
  namespace: default
spec:
  tls:
  - hosts:
      - lab3000.com
    secretName: lab3-tls
  rules:
  - host: lab3000.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: labrep
            port:
              number: 3000
